--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
 			<version>2.1</version>
 		</dependency>
 		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>18.0</version>
+		</dependency>
+		<dependency>
 			<groupId>net.sf.jung</groupId>
 			<artifactId>jung-api</artifactId>
 			<version>2.0.1</version>
@@ -23,16 +28,16 @@
 			<version>2.0.1</version>
 		</dependency>
 		<dependency>
-        <groupId>net.sf.jung</groupId>
-            <artifactId>jung-graph-impl</artifactId>
-            <version>2.0.1</version>
+			<groupId>net.sf.jung</groupId>
+			<artifactId>jung-graph-impl</artifactId>
+			<version>2.0.1</version>
 		</dependency>
 		<dependency>
-                <groupId>net.sf.jung</groupId>
-                <artifactId>jung2</artifactId>
-                <version>2.0.1</version>
-                <type>pom</type>                 
-        </dependency>
+			<groupId>net.sf.jung</groupId>
+			<artifactId>jung2</artifactId>
+			<version>2.0.1</version>
+			<type>pom</type>
+		</dependency>
 
 	</dependencies>
 
