--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
 		</dependency>
 		<dependency>
 			<groupId>net.sf.jung</groupId>
+			<artifactId>jung-visualization</artifactId>
+			<version>2.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.jung</groupId>
 			<artifactId>jung2</artifactId>
 			<version>2.0.1</version>
 			<type>pom</type>
