--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,6 @@
 
 
 		<dependency>
-			<groupId>com.googlecode.combinatoricslib</groupId>
-			<artifactId>combinatoricslib</artifactId>
-			<version>2.1</version>
-		</dependency>
-		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>18.0</version>
@@ -43,6 +38,12 @@
 			<version>2.0.1</version>
 			<type>pom</type>
 		</dependency>
+		<dependency>
+	<groupId>org.apache.commons</groupId>
+	<artifactId>commons-math3</artifactId>
+	<version>3.3</version>
+</dependency>
+		
 
 	</dependencies>
 
